gcc/testsuite/rust/rustc/ui/extenv/extenv-arg-2-not-string-literal.rs
fn main() { env!("one", 10); } // { dg-error "" "" { target *-*-* } }

